--- a/campus-recruitment-portal-react/package.json
+++ b/campus-recruitment-portal-react/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@aws-amplify/auth": "^6.11.2",
     "aws-amplify": "^6.15.8",
+    "axios": "^1.13.5",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.5"
